# nominatim-highlighter

./: .gitignore  docker-compose.nominatim.yaml  get_availability_map.ipynb  pyproject.toml
districts_data_processing/: .gitignore  analysis_regions.ipynb  extract_admin_div.ipynb
