[project]
name = "nominatim-highlighter"
version = "0.1.0"
authors = [
    { name = "AIn0n", email = "55995692+AIn0n@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]
